--- a/public/tasklist.html
+++ b/public/tasklist.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="scss\main.scss" />
   <link rel="icon" href="images\favicon.png">
 </head>
-<body>
+<body onload="displayTask()">
   <div class="main">
     <label>Task List - </label>
     <select name="group" id="groupSelect">
