--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,24 @@
 </head>
 <body>
     <div class="navigation">
-        <ul>
-          <button id="community"><a href='comm.html'>fhg</a></button>
-          <button id="resource"><a href='resource.html'>ghfgh</a></button>
-          <button id="timer"><a href='timer.html'>fgf</a></button>
-          <button id="help"><a href='help.html'>gfhg</a></button>
-          <button id="setting"><a href='setting.html'>ghfg</a></button>
-          <button id="user"><a href='user.html'>ghgfj</a></button>
-        </ul>
-      </div>
+      <ul>
+        <button id="community"><a href='comm.html'>fhg</a></button>
+        <button id="resource"><a href='resource.html'>ghfgh</a></button>
+        <button id="timer"><a href='timer.html'>fgf</a></button>
+        <button id="help"><a href='help.html'>gfhg</a></button>
+        <button id="setting"><a href='setting.html'>ghfg</a></button>
+        <button id="user"><a href='user.html'>ghgfj</a></button>
+      </ul>
+    </div>
 
   <div class="main">
+    <div id='calendar'></div>
+
     <button id="switch" onclick="switchNav()">switch</button>
     <button id="tasklist"><a href= "tasklist.html">Task List</a></button>
   </div>
 
   <script src="index.js"></script>
+  <script src='bundler/main.js'></script>
 </body>
 </html>
