--- a/public/timer.html
+++ b/public/timer.html
@@ -9,6 +9,21 @@
   <link rel="icon" href="images\favicon.png">
 </head>
 <body>
+  <div class="navigation">
+    <ul>
+      <button id="community"><a href='comm.html'>fhg</a></button>
+      <button id="resource"><a href='resource.html'>ghfgh</a></button>
+      <button id="timer"><a href='timer.html'>fgf</a></button>
+      <button id="help"><a href='help.html'>gfhg</a></button>
+      <button id="setting"><a href='setting.html'>ghfg</a></button>
+      <button id="user"><a href='user.html'>ghgfj</a></button>
+    </ul>
+  </div>
+
+  <div class="main">
+    <button id="switch" onclick="switchNav()">switch</button>
+  </div>
+  
   <script src="timer.js"></script>
 </body>
 </html>
