--- a/public/tasklist.html
+++ b/public/tasklist.html
@@ -1,3 +1,5 @@
+<!-- this is the task list that I created but not working (no errors) -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +17,11 @@
       <option value="all">All</option>
     </select>
 
-    <div class="flip-card"></div>
+    <div class="taskcard">
+      <p>Add Your First Task Here</p>
+      <button id="taskedit"><a href= "taskadd.html">Edit</a></button><br>
+      <button id="delete" onclick="deleteTask()">Delete</button>
+    </div>
     
     <div class="taskadd">
       <button id="taskadd"><a href= "taskadd.html">add</a></button>
