--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,45 @@
   <meta name="description" content="" />
   <link rel="stylesheet" type="text/css" href="scss\main.scss" />
   <link rel="icon" href="images\favicon.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-    <div class="navigation">
-      <ul>
-        <button id="community"><a href='comm.html'>fhg</a></button>
-        <button id="resource"><a href='resource.html'>ghfgh</a></button>
-        <button id="timer"><a href='timer.html'>fgf</a></button>
-        <button id="help"><a href='help.html'>gfhg</a></button>
-        <button id="setting"><a href='setting.html'>ghfg</a></button>
-        <button id="user"><a href='user.html'>ghgfj</a></button>
-      </ul>
+  <!-- navigation side bar -->
+  <div class="navigation">
+    <ul>
+      <h2 style="color: #EFA26A;">StudBud</h2>
+      <button id="community" onclick="warning()"><span class="material-icons">groups</span></button>
+      <button id="resource"><a href='resource.html'><span class="material-icons">auto_stories</span></a></button>
+      <button id="timer"><a href='timer.html'><span class="material-icons">timer</span></a></button>
+      <br>
+      <button id="help" style="float: left;" onclick="warning()"><span class="material-icons">question_mark</span></button>
+      <button id="setting" style="float: left;"><a href='setting.html'><span class="material-icons">settings</span></a></button>
+      <button id="user" style="float: left;" onclick="warning()"><span class="material-icons">person</span></button>
+    </ul>
+  </div>
+
+  <!-- area of content -->
+  <div class="main">
+
+    <!-- calendar - quadrant part -->
+    <button id="switchView" onclick="switchView()">Covey Quadrant</button><br>
+
+    <div id='calendar'>
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+      <div class="elfsight-app-967fa108-2257-49cc-b794-98582e131c0f"></div>
+    </div>
+    <div id='quadrant'>
+      <canvas id="canvas" width="800" height="800" style="border:none"></canvas>
     </div>
 
-  <div class="main">
-    <div id='calendar'></div>
-
-    <button id="switch" onclick="switchNav()">switch</button>
+    <!-- side bar switch and task list -->
+    <button id="switch" onclick="switchNav()">close<</button>
     <button id="tasklist"><a href= "tasklist.html">Task List</a></button>
+    <button id="todo"><a href= "todo.html">TODO</a></button>
   </div>
 
   <script src="index.js"></script>
-  <script src='bundler/main.js'></script>
+  <script src="navigation.js"></script>
 </body>
 </html>
