--- a/public/resource.html
+++ b/public/resource.html
@@ -7,25 +7,38 @@
   <meta name="description" content="" />
   <link rel="stylesheet" type="text/css" href="scss\main.scss" />
   <link rel="icon" href="images\favicon.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <div class="navigation">
     <ul>
-      <button id="community"><a href='comm.html'>fhg</a></button>
-      <button id="resource"><a href='resource.html'>ghfgh</a></button>
-      <button id="timer"><a href='timer.html'>fgf</a></button>
-      <button id="help"><a href='help.html'>gfhg</a></button>
-      <button id="setting"><a href='setting.html'>ghfg</a></button>
-      <button id="user"><a href='user.html'>ghgfj</a></button>
+      <h2 style="color: #EFA26A;">StudBud</h2>
+      <button id="community" onclick="warning()"><span class="material-icons">groups</span></button>
+      <button id="resource"><a href='resource.html'><span class="material-icons">auto_stories</span></a></button>
+      <button id="timer"><a href='timer.html'><span class="material-icons">timer</span></a></button>
+      <br>
+      <button id="help" style="float: left;" onclick="warning()"><span class="material-icons">question_mark</span></button>
+      <button id="setting" style="float: left;"><a href='setting.html'><span class="material-icons">settings</span></a></button>
+      <button id="user" style="float: left;" onclick="warning()"><span class="material-icons">person</span></button>
     </ul>
   </div>
   
   <div class="main">
-    <button id="switch" onclick="switchNav()">switch</button>
-    <button id="manage"><a href="resource-m.html">Manage</a></button>
-    <button id="access"><a href="resource-a.html">Access</a></button>
+    <!-- for input links -->
+    <form class="links">
+      <input type="text" class="linkInput" placeholder="Add a link">
+      <button type="submit" class="addLink">Add</button>
+    </form>
+    <button type="submit" class="addLinks" onclick="addGroup()">Add Group of Links</button>
+  
+    <!-- for display links -->
+    <ul id="links">
+    </ul>
+
+    <button id="switch" onclick="switchNav()">close<</button>
   </div>
 
   <script src="resource.js"></script>
+  <script src="navigation.js"></script>
 </body>
 </html>
