--- a/public/setting.html
+++ b/public/setting.html
@@ -7,28 +7,33 @@
   <meta name="description" content="" />
   <link rel="stylesheet" type="text/css" href="scss\main.scss" />
   <link rel="icon" href="images\favicon.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <div class="navigation">
     <ul>
-      <button id="community"><a href='comm.html'>fhg</a></button>
-      <button id="resource"><a href='resource.html'>ghfgh</a></button>
-      <button id="timer"><a href='timer.html'>fgf</a></button>
-      <button id="help"><a href='help.html'>gfhg</a></button>
-      <button id="setting"><a href='setting.html'>ghfg</a></button>
-      <button id="user"><a href='user.html'>ghgfj</a></button>
+      <h2 style="color: #EFA26A;">StudBud</h2>
+      <button id="community" onclick="warning()"><span class="material-icons">groups</span></button>
+      <button id="resource"><a href='resource.html'><span class="material-icons">auto_stories</span></a></button>
+      <button id="timer"><a href='timer.html'><span class="material-icons">timer</span></a></button>
+      <br>
+      <button id="help" style="float: left;" onclick="warning()"><span class="material-icons">question_mark</span></button>
+      <button id="setting" style="float: left;"><a href='setting.html'><span class="material-icons">settings</span></a></button>
+      <button id="user" style="float: left;" onclick="warning()"><span class="material-icons">person</span></button>
     </ul>
   </div>
 
   <div class="main">
-    <button id="switch" onclick="switchNav()">switch</button>
-    <button type="submit">Save</button>
+    <button id="switch" onclick="switchNav()">close<</button>
+
+    <!-- the form but act like setting -->
+    <button id="save" type="submit">Save</button>
 
     <form id="setting">
       <div class="reminder">
         <label for="reminder">Reminder Setting </label>
         <input type="button" value="On" onclick="reminder()">
-        <input type="button" value="Off" onclick="reminder()">
+        <input type="button" value="Off">
         <br>
       
         <label for="music">Sound </label>
@@ -60,5 +65,6 @@
   </div>
 
   <script src="setting.js"></script>
+  <script src="navigation.js"></script>
 </body>
 </html>
