--- a/public/timer.html
+++ b/public/timer.html
@@ -7,23 +7,53 @@
   <meta name="description" content="" />
   <link rel="stylesheet" type="text/css" href="scss\main.scss" />
   <link rel="icon" href="images\favicon.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <div class="navigation">
     <ul>
-      <button id="community"><a href='comm.html'>fhg</a></button>
-      <button id="resource"><a href='resource.html'>ghfgh</a></button>
-      <button id="timer"><a href='timer.html'>fgf</a></button>
-      <button id="help"><a href='help.html'>gfhg</a></button>
-      <button id="setting"><a href='setting.html'>ghfg</a></button>
-      <button id="user"><a href='user.html'>ghgfj</a></button>
+      <h2 style="color: #EFA26A;">StudBud</h2>
+      <button id="community" onclick="warning()"><span class="material-icons">groups</span></button>
+      <button id="resource"><a href='resource.html'><span class="material-icons">auto_stories</span></a></button>
+      <button id="timer"><a href='timer.html'><span class="material-icons">timer</span></a></button>
+      <br>
+      <button id="help" style="float: left;" onclick="warning()"><span class="material-icons">question_mark</span></button>
+      <button id="setting" style="float: left;"><a href='setting.html'><span class="material-icons">settings</span></a></button>
+      <button id="user" style="float: left;" onclick="warning()"><span class="material-icons">person</span></button>
     </ul>
   </div>
 
   <div class="main">
-    <button id="switch" onclick="switchNav()">switch</button>
+
+    <button id="switch" onclick="switchNav()">close<</button>
+    <!-- change between two timers -->
+    <button id="switchTimer" onclick="switchTimer()">pomodoro</button>
+    <br>
+    <br>
+    
+    <div id="stopwatch">
+      <div class="timerDisplay">
+        00 : 00 : 00
+      </div>
+      <div class="buttons">
+        <button id="pauseTimer">Pause</button>
+        <button id="startTimer">Start</button>
+        <button id="resetTimer">Reset</button>
+      </div>
+    </div>
+
+    <div id="pomodoro"></div>
+
+    <button id="music" onclick="openPlayer()"><span class="material-icons">music_note</span></button>
+    <!-- music widget -->
+    <div id="player">
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+      <div class="elfsight-app-d6de7d53-a20b-40f5-ad8f-40107279bd66"></div>
+    </div>
+    
   </div>
   
   <script src="timer.js"></script>
+  <script src="navigation.js"></script>
 </body>
 </html>
